--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,5 +100,12 @@ dependencies {
     // When using Java.
     annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0'
 
+    def nav_version = "2.3.5"
+    // Kotlin
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    // Jetpack Compose Integration
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha10"
+
 
 }
