--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.example.dookoff.HiltJRunner"
         vectorDrawables {
             useSupportLibrary true
         }
@@ -86,11 +86,18 @@ dependencies {
 
     //HILT
     implementation "com.google.dagger:hilt-android:2.38.1"
+
     kapt "com.google.dagger:hilt-compiler:2.38.1"
     implementation 'androidx.hilt:hilt-navigation-fragment:1.0.0'
     implementation 'androidx.hilt:hilt-work:1.0.0'
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
     annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0'
+    testImplementation("com.google.dagger:hilt-android-testing:2.38.1")
+    androidTestImplementation "com.google.dagger:hilt-android-testing:2.38.1"
+    kaptAndroidTest("com.google.dagger:hilt-android-compiler:2.38.1")
+    kaptTest("com.google.dagger:hilt-android-compiler:2.38.1")
+    testAnnotationProcessor("com.google.dagger:hilt-android-compiler:2.38.1")
+    androidTestAnnotationProcessor("com.google.dagger:hilt-android-compiler:2.38.1")
 
     //Navigation
     def nav_version = "2.3.5"
@@ -106,5 +113,6 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     testImplementation 'junit:junit:4.13.2'
     testImplementation "com.google.truth:truth:1.1.3"
+
 
 }
